objects/Gift_Aid_Declaration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMS_Declartion_ID__c</fullName>
        <externalId>true</externalId>
        <label>DMS Declartation ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Donor__c</fullName>
        <label>Donor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Gift Aid Declarations</relationshipLabel>
        <relationshipName>Gift_Aid_Declarations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gift_Aid_Declaration__c</fullName>
        <defaultValue>&apos;If you are a UK tax payer and tick Yes to Gift Aid the government will give us 25% on top of your donation. It doesnt cost you a penny, and helps to keep us going&apos;</defaultValue>
        <inlineHelpText>If you are a UK tax payer and tick &apos;Yes&apos; to Gift Aid the government will give us 25% on top of your donation. It doesn&apos;t cost you a penny, and helps to keep us going</inlineHelpText>
        <label>Gift Aid Declaration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gift_Aid_Effective_Date__c</fullName>
        <label>Gift Aid Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Aid_End_Date__c</fullName>
        <label>Gift Aid End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Aid_Source__c</fullName>
        <label>Gift Aid Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>Donor Portal</fullName>
                </value>
                <value>
                    <fullName>Written</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gift_Aid_Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Gift Aid Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Aid_Status__c</fullName>
        <label>Gift Aid Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GDPR</valueSetName>
        </valueSet>
    </fields>
    <label>Gift Aid Declaration</label>
    <nameField>
        <displayFormat>GD-{00000}</displayFormat>
        <label>Gift Aid Declaration #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Aid Declarations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>